# pet-project-for-testing-Airflow

./: README.md  docker-compose.yaml  pyproject.toml
dags/: dag_load_data_from_api_to_postgres_with_duckdb.py  dag_load_from_api_to_postgres_with_duckdb_using_temp_table.py  dag_load_users_dm_with_sensor.py  dag_load_users_from_api.py  dag_logging_context.py  dag_print_context.py  dag_users_trigger_load.py  dag_with_another_dynamic_tasks.py  dag_with_dynamic_dags.py  dag_with_dynamic_tasks.py  dag_with_groups.py  dag_with_hook_and_variable.py  dag_with_xcom_manual.py  dag_with_xcom_via_return.py  dag_with_yet_another_dynamic_tasks.py
dags/conf/: dag_config.json
dags/dyn/: dag_with_another_dynamic_tasks.py  dag_with_dynamic_dags.py  dag_with_dynamic_tasks.py  dag_with_yet_another_dynamic_tasks.py
dags/etl/: dag_load_data_from_api_to_postgres_with_duckdb.py  dag_load_users_dm_started_by_trigger.py  dag_load_users_from_api.py  dag_users_trigger_load.py
dags/other/: dag_python_func_with_params.py
dags/utils/: group_tasks_for_logging_dates.py  working_with_pg.py
dags/xcom/: dag_with_xcom_manual.py  dag_with_xcom_via_return.py
