[project]
name = "project-2-working-with-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.11.0",
    "apache-airflow-providers-postgres>=6.5.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "pendulum>=3.1.0",
]
